2006-10-30  Dariush Molavi  <dari@nukedgallery.net> 0.5.13
        * Fix: include -> include_once in case files. Thanks to BigD.

2006-05-15  Dariush Molavi  <dari@nukedgallery.net> 0.5.12
	* Fix: Modified SQL query to create config table. This should
	  resolve the "blank screen" issue that users have complained
	  about.

2006-05-09  Dariush Molavi  <dari@nukedgallery.net> 0.5.11
	* Update: New version file location.

2006-03-02  Dariush Molavi  <dari@nukedgallery.net> 0.5.10
	* Update: Cleaned up language files, removed unused 
	  entries.
	* Fix: Added $nukeurl to $g2Uri and $embedUri defaults. 
	  Should be foolproof now. Updated Readme with new 
	  examples.
	* Change: Removed $loginRedirect, since we don't show 
	  the login link anywhere. Updated config DB table, 
	  and added updater.
	* Fix: Update require statement for embed.php in blocks. 
	* Update: Added check to block-G2_ImageBlock to verify 
	  that the imageblock module is available in G2.

2006-03-01  Dariush Molavi  <dari@nukedgallery.net> 0.5.9
	* Fix: Forgot to declare $module_name.

2006-03-01  Dariush Molavi  <dari@nukedgallery.net> 0.5.8
	* Update: Removed Your_Account hack from Readme.

2006-03-01  Dariush Molavi  <dari@nukedgallery.net> 0.5.7
	* Fix: Oops, forgot to properly escape some quotes.

2006-03-01  Dariush Molavi  <dari@nukedgallery.net> 0.5.6
	* Fix: Fixed the require_once statements that include the embed.php 
	  file. The existing statement didn't take into account http:// 
	  type of entries for g2Uri and embedUri.  Thanks to kungfoo for the 
	  new code.

2006-02-22  Dariush Molavi  <dari@nukedgallery.net> 0.5.5
	* Fix: Revert change that disabled export user functionality after 
	  initial configuration.

2006-02-21  Dariush Molavi  <dari@nukedgallery.net> 0.5.4
	* New: Admin CP now detects if this is an upgrade from a pre-2.1 version, 
	  and prompts the user to upgrade accordingly.
	* Fix: Fixed bad sql query in block files (thanks kungfoo).
